# CodexBuildWeek2026

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Makefile  README.md  design-system.md
backend/: README.md  jsonschema.py  pydantic.py  pyproject.toml
backend/app/: config.py  fixture_loader.py  main.py
backend/app/codex/: __init__.py  client.py  live_client.py  live_spike.md  sandbox.py  validate.py
backend/app/director/: __init__.py  live_client.py  models.py
backend/app/evidence/: __init__.py  render.py
backend/app/llm/: __init__.py  client.py  fixture_client.py  live_client.py  validate.py
backend/app/pipeline/: __init__.py  live_checks.py  live_pipeline.py  live_rerun.py  mock_pipeline.py  repair_verifier.py
backend/app/routers/: approvals.py  director.py  evidence.py  (+1 more)
backend/fastapi/: __init__.py  testclient.py
backend/tests/: test_api_fixture_mode.py  test_api_store_backed.py  test_codex_live_client.py  test_codex_sandbox.py  test_codex_spike_documentation.py  test_codex_validate.py  test_contracts.py  test_director_api.py  test_director_client.py  test_evidence_render.py  test_fixture_patch_applicability.py  test_fixtures.py  test_live_api.py  test_live_checks.py  test_live_pipeline.py  test_live_rerun.py  test_llm_fixture_client.py  test_llm_live_client.py  test_llm_validate.py  test_mock_pipeline.py  test_no_fake_dependencies.py  test_planted_migration.py  test_reconcile_agent.py  test_reconcile_fixture.py  test_reconcile_heuristic.py  test_reconcile_validate.py  test_state_machine.py  test_store.py  test_store_live_ids.py
(+173 files in other folders)
