[project]
name = "release-assurance-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.111", "pydantic>=2.7", "uvicorn>=0.30", "jsonschema>=4.22", "openai>=2.38,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
